# android_transcribe_app

./: .gitignore  AndroidManifest.xml  Cargo.toml  README.md  build.sh  build_aab.sh  download_ndk.sh  gradle.properties  settings.gradle.kts
.cargo/: config.toml  config.toml.example
.github/workflows/: android_release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/parakeet-tdt-0.6b-v3-int8/: config.json
app/src/main/java/dev/notune/transcribe/: AudioFocusPauser.java  LiveSubtitleActivity.java  MainActivity.java  MicLevelView.java  RecognizeActivity.java  RustInputMethodService.java  TranscribeFileActivity.java
app/src/main/res/drawable/: bg_backspace.xml  bg_card.xml  ic_enter.xml  ic_keyboard_switch.xml  ic_space.xml
app/src/main/res/layout/: activity_main.xml  ime_layout.xml  recognize_activity.xml  service_subtitle.xml  transcribe_file_activity.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/xml/: method.xml
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 12.txt
res/layout/: activity_main.xml  ime_layout.xml
res/values/: colors.xml  strings.xml
res/xml/: method.xml
src/: assets.rs  engine.rs  ime.rs  lib.rs  main_activity.rs  recognize.rs  subtitle.rs  transcribe_file.rs  voice_session.rs
src/java/dev/notune/transcribe/: LiveSubtitleActivity.java  LiveSubtitleService.java  MainActivity.java  RustInputMethodService.java
transcribe-rs/: .gitignore  Cargo.toml  LICENSE  README.md
transcribe-rs/examples/: openai.rs  transcribe.rs
transcribe-rs/src/: audio.rs  lib.rs
transcribe-rs/src/engines/: mod.rs  whisper.rs
transcribe-rs/src/engines/parakeet/: engine.rs  mod.rs  model.rs  timestamps.rs
transcribe-rs/src/remote/: mod.rs  openai.rs
transcribe-rs/tests/: openai.rs  parakeet.rs  whisper.rs
