[package]
name = "android_transcribe_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
eframe = "0.30"
winit = { version = "0.30", features = ["android-native-activity"] }
android-activity = "0.6"
cpal = "0.15"
log = "0.4"
android_logger = "0.13"
anyhow = "1.0"
transcribe-rs = { path = "transcribe-rs" }
# We need these to access assets and internal storage path
ndk = "0.9"
ndk-context = "0.1"
jni = "0.21"
once_cell = "1.19"
parking_lot = "0.12"
crossbeam-channel = "0.5"

# For asset extraction
tar = "0.4"
flate2 = "1.0"

ort = { version = "2.0.0-rc.10", features = ["load-dynamic"] }

[package.metadata.android]
package = "dev.notune.transcribe"
manifest_path = "AndroidManifest.xml"
res = "res"
java_sources = ["src/java"]
assets = "assets"
runtime_libs = "jniLibs"
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 35

[package.metadata.android.application]
label = "Offline Voice Input"

[[package.metadata.android.uses_permission]]
name = "android.permission.RECORD_AUDIO"